--- a/package.json
+++ b/package.json
@@ -16,6 +16,13 @@
     "src/p2pfarmers_frontend"
   ],
   "dependencies": {
-    "@dfinity/use-auth-client": "^2.0.0"
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.2",
+    "@dfinity/use-auth-client": "^2.0.0",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "framer-motion": "^11.5.4",
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^6.26.2"
   }
 }
