--- a/src/p2pfarmers_frontend/package.json
+++ b/src/p2pfarmers_frontend/package.json
@@ -19,13 +19,16 @@
     "@dfinity/principal": "^2.0.0",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@rollup/plugin-node-resolve": "^15.2.3",
     "framer-motion": "^11.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "vite-plugin-commonjs": "^0.10.1"
   },
   "devDependencies": {
+    "@types/node": "^22.5.4",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@vitejs/plugin-react": "^4.0.1",
