--- a/src/p2pfarmers_frontend/package.json
+++ b/src/p2pfarmers_frontend/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "setup": "npm i && dfx canister create p2pfarmers_backend && dfx generate p2pfarmers_backend && dfx deploy",
+    "setup": "npm i && dfx canister create backend && dfx generate backend && dfx deploy",
     "start": "vite --port 3000",
     "prebuild": "dfx generate",
     "build": "tsc && vite build",
